apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@jwt-on-error-redacted-error.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
authentication:
  router:
    jwt:
      jwks:
        - url: "https://example.com"
      on_error: redacted_error
