apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@jwt_issuer_to_issuers.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
authentication:
  router:
    jwt:
      jwks:
        - url: "https://dev-zzp5enui.us.auth0.com/.well-known/jwks.json"
          poll_interval: 60s
          headers:
            - name: User-Agent
              value: router
          issuers:
            - "https://issuer.one"
        - url: "https://dev-zzp5enui.us.auth0.com/.well-known/jwks.json"
          poll_interval: 60s
          headers:
            - name: User-Agent
              value: router
          issuers:
            - "https://issuer.two"
