apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@otlp_enabled.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  tracing:
    otlp:
      endpoint: default
      enabled: true
  metrics:
    otlp:
      endpoint: default
      enabled: true

