apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@parser_recursion.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
limits:
  router:
    parser_max_recursion: 100

