apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@persisted-queries-prewarm-already-object.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
persisted_queries:
  enabled: true
  experimental_prewarm_query_plan_cache:
    on_reload: false
